--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
     "url": "git@github.com:Kin-Carta-Connect/eslint-config.git"
   },
   "main": "index.js",
+  "files": [
+    "rules/**/*.js",
+    "index.js",
+    "jest.js",
+    "node.js",
+    "react.js"
+  ],
   "scripts": {
     "test": "jest.cmd",
     "watch": "jest.cmd --watch",
