--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kinandcarta/eslint-config",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "description": "Kin+Carta ESLint Shareable Config",
   "keywords": [
     "eslint",
@@ -23,7 +23,7 @@
     "react.js"
   ],
   "scripts": {
-    "test": "jest.cmd",
+    "test": "jest",
     "watch": "jest.cmd --watch",
     "release": "np --no-cleanup --no-yarn"
   },
@@ -31,24 +31,31 @@
     "access": "public"
   },
   "dependencies": {
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/commit-analyzer": "^8.0.1",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/github": "^7.2.0",
+    "@semantic-release/npm": "^7.0.9",
+    "@semantic-release/release-notes-generator": "^9.0.1",
     "confusing-browser-globals": "^1.0.7",
     "eslint-plugin-compat": "^3.1.2",
     "eslint-plugin-eslint-comments": "^3.1.2",
     "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jest": "^22.7.1",
-    "eslint-plugin-jsdoc": "^8.6.0",
-    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-jsdoc": "^31.3.3",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-react": "^7.14.2",
-    "eslint-plugin-unicorn": "^9.1.1"
+    "eslint-plugin-unicorn": "^27.0.0"
   },
   "devDependencies": {
-    "eslint": "^6.0.1",
-    "jest": "^24.8.0",
-    "np": "*"
+    "eslint": "^7.18.0",
+    "jest": "^26.6.3",
+    "np": "*",
+    "semantic-release": "^17.3.0"
   },
   "peerDependencies": {
-    "eslint": "^6.0.0"
+    "eslint": "^7.18.0"
   }
 }
