--- a/package.json
+++ b/package.json
@@ -31,12 +31,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/commit-analyzer": "^8.0.1",
-    "@semantic-release/git": "^9.0.0",
-    "@semantic-release/github": "^7.2.0",
-    "@semantic-release/npm": "^7.0.9",
-    "@semantic-release/release-notes-generator": "^9.0.1",
     "confusing-browser-globals": "^1.0.7",
     "eslint-plugin-compat": "^3.1.2",
     "eslint-plugin-eslint-comments": "^3.1.2",
@@ -50,6 +44,13 @@
     "eslint-plugin-unicorn": "^27.0.0"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/commit-analyzer": "^8.0.1",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/github": "^7.2.0",
+    "@semantic-release/npm": "^7.0.9",
+    "@semantic-release/release-notes-generator": "^9.0.1",
+    "conventional-changelog-conventionalcommits": "^4.5.0",
     "eslint": "^7.18.0",
     "jest": "^26.6.3",
     "np": "*",
