--- a/.releaserc.json
+++ b/.releaserc.json
@@ -3,7 +3,49 @@
 	"plugins": [
 		[
 			"@semantic-release/commit-analyzer", {
-				"preset": "conventionalcommits"
+				"preset": "conventionalcommits",
+				"releaseRules": [
+					{
+						"type": "feat",
+						"release": "patch"
+					},
+					{
+						"type": "fix",
+						"release": "patch"
+					},
+					{
+						"type": "perf",
+						"release": "patch"
+					},
+					{
+						"type": "build",
+						"release": "patch"
+					},
+					{
+						"type": "ci",
+						"release": "patch"
+					},
+					{
+						"type": "chore",
+						"release": "patch"
+					},
+					{
+						"type": "docs",
+						"release": "patch"
+					},
+					{
+						"type": "refactor",
+						"release": "patch"
+					},
+					{
+						"type": "style",
+						"release": "patch"
+					},
+					{
+						"type": "test",
+						"release": "patch"
+					}
+				]
 			}
 		],
 		[
