--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "type": "git",
     "url": "git@github.com:Kin-Carta-Connect/eslint-config.git"
   },
+  "engines" : {
+    "node" : ">=12"
+  },
   "main": "index.js",
   "files": [
     "rules/**/*.js",
@@ -24,8 +27,7 @@
   ],
   "scripts": {
     "test": "jest",
-    "watch": "jest.cmd --watch",
-    "release": "np --no-cleanup --no-yarn"
+    "watch": "jest.cmd --watch"
   },
   "publishConfig": {
     "access": "public"
@@ -53,7 +55,6 @@
     "conventional-changelog-conventionalcommits": "^4.5.0",
     "eslint": "^7.18.0",
     "jest": "^26.6.3",
-    "np": "*",
     "semantic-release": "^17.3.0"
   },
   "peerDependencies": {
